--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -20,8 +20,8 @@ on:
         default: 'false'
 
 env:
-  REPO_URL: https://github.com/redfrog999/immortalwrt
-  REPO_BRANCH: openwrt-21.02
+  REPO_URL: https://github.com/zow2023/PCODE
+  REPO_BRANCH: "v24100"
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: 2102.config
   DIY_P1_SH: diy-part1.sh
