--- a/w6.config
+++ b/w6.config
@@ -2752,7 +2752,7 @@ CONFIG_PACKAGE_urandom-seed=y
 CONFIG_PACKAGE_urngd=y
 CONFIG_PACKAGE_usign=y
 # CONFIG_PACKAGE_uxc is not set
-CONFIG_PACKAGE_wifi-scripts=y
+# CONFIG_PACKAGE_wifi-scripts is not set
 CONFIG_PACKAGE_wireless-tools=y
 CONFIG_PACKAGE_zram-swap=y
 # CONFIG_PACKAGE_zyxel-bootconfig is not set
@@ -6673,7 +6673,7 @@ CONFIG_PACKAGE_datconf-lua=y
 CONFIG_PACKAGE_mii_mgr=y
 CONFIG_PACKAGE_mtk-smp=y
 CONFIG_PACKAGE_mtkhqos_util=y
-CONFIG_PACKAGE_mtwifi-cfg=y
+# CONFIG_PACKAGE_mtwifi-cfg is not set
 CONFIG_PACKAGE_regs=y
 CONFIG_PACKAGE_switch=y
 # end of Applications
@@ -6700,17 +6700,18 @@ CONFIG_MTK_WIFI_DRIVER=y
 CONFIG_MTK_FIRST_IF_MT7986=y
 # CONFIG_MTK_FIRST_IF_MT7916 is not set
 # CONFIG_MTK_FIRST_IF_MT7981 is not set
-CONFIG_MTK_SECOND_IF_NONE=y
+# CONFIG_MTK_SECOND_IF_NONE is not set
 # CONFIG_MTK_SECOND_IF_MT7615E is not set
 # CONFIG_MTK_SECOND_IF_AXE is not set
 # CONFIG_MTK_SECOND_IF_MT7915 is not set
-# CONFIG_MTK_SECOND_IF_MT7916 is not set
+CONFIG_MTK_SECOND_IF_MT7916=y
 CONFIG_MTK_THIRD_IF_NONE=y
 # CONFIG_MTK_THIRD_IF_MT7615E is not set
 # CONFIG_MTK_THIRD_IF_MT7915 is not set
 # CONFIG_MTK_THIRD_IF_MT7916 is not set
 CONFIG_MTK_RT_FIRST_IF_RF_OFFSET=0xc0000
-CONFIG_MTK_MT_WIFI=m
+CONFIG_MTK_RT_SECOND_IF_RF_OFFSET=0xc8000
+CONFIG_MTK_MT_WIFI=y
 CONFIG_MTK_MT_WIFI_PATH="mt_wifi"
 
 #
@@ -6720,6 +6721,11 @@ CONFIG_MTK_FIRST_IF_EEPROM_FLASH=y
 # CONFIG_MTK_FIRST_IF_EEPROM_PROM is not set
 # CONFIG_MTK_FIRST_IF_EEPROM_EFUSE is not set
 CONFIG_MTK_RT_FIRST_CARD_EEPROM="flash"
+CONFIG_MTK_SECOND_IF_EEPROM_FLASH=y
+# CONFIG_MTK_SECOND_IF_EEPROM_PROM is not set
+# CONFIG_MTK_SECOND_IF_EEPROM_EFUSE is not set
+CONFIG_MTK_RT_SECOND_CARD_EEPROM="flash"
+CONFIG_MTK_MULTI_INF_SUPPORT=y
 CONFIG_MTK_WIFI_BASIC_FUNC=y
 CONFIG_MTK_DOT11_N_SUPPORT=y
 CONFIG_MTK_DOT11_VHT_AC=y
@@ -6786,6 +6792,9 @@ CONFIG_MTK_RED_SUPPORT=y
 # CONFIG_MTK_FIRST_IF_EPAELNA is not set
 CONFIG_MTK_FIRST_IF_IPAILNA=y
 # CONFIG_MTK_FIRST_IF_IPAELNA is not set
+CONFIG_MTK_SECOND_IF_EPAELNA=y
+# CONFIG_MTK_SECOND_IF_IPAILNA is not set
+# CONFIG_MTK_SECOND_IF_IPAELNA is not set
 CONFIG_MTK_MT7986_NEW_FW=y
 CONFIG_MTK_WIFI_FW_BIN_LOAD=y
 CONFIG_MTK_WIFI_SKU_TYPE="AX6000"
@@ -6876,7 +6885,7 @@ CONFIG_MTK_MT_MAC=y
 # CONFIG_MTK_CHIP_AXE is not set
 # CONFIG_MTK_CHIP_MT7915 is not set
 CONFIG_MTK_CHIP_MT7986=y
-# CONFIG_MTK_CHIP_MT7916 is not set
+CONFIG_MTK_CHIP_MT7916=y
 # CONFIG_MTK_CHIP_MT7981 is not set
 CONFIG_PACKAGE_kmod-warp=y
 CONFIG_WARP_VERSION=2
