--- a/w6.config
+++ b/w6.config
@@ -6700,18 +6700,17 @@ CONFIG_MTK_WIFI_DRIVER=y
 CONFIG_MTK_FIRST_IF_MT7986=y
 # CONFIG_MTK_FIRST_IF_MT7916 is not set
 # CONFIG_MTK_FIRST_IF_MT7981 is not set
-# CONFIG_MTK_SECOND_IF_NONE is not set
+CONFIG_MTK_SECOND_IF_NONE=y
 # CONFIG_MTK_SECOND_IF_MT7615E is not set
 # CONFIG_MTK_SECOND_IF_AXE is not set
 # CONFIG_MTK_SECOND_IF_MT7915 is not set
-CONFIG_MTK_SECOND_IF_MT7916=y
+# CONFIG_MTK_SECOND_IF_MT7916 is not set
 CONFIG_MTK_THIRD_IF_NONE=y
 # CONFIG_MTK_THIRD_IF_MT7615E is not set
 # CONFIG_MTK_THIRD_IF_MT7915 is not set
 # CONFIG_MTK_THIRD_IF_MT7916 is not set
 CONFIG_MTK_RT_FIRST_IF_RF_OFFSET=0xc0000
-CONFIG_MTK_RT_SECOND_IF_RF_OFFSET=0xc8000
-CONFIG_MTK_MT_WIFI=y
+CONFIG_MTK_MT_WIFI=m
 CONFIG_MTK_MT_WIFI_PATH="mt_wifi"
 
 #
@@ -6721,11 +6720,6 @@ CONFIG_MTK_FIRST_IF_EEPROM_FLASH=y
 # CONFIG_MTK_FIRST_IF_EEPROM_PROM is not set
 # CONFIG_MTK_FIRST_IF_EEPROM_EFUSE is not set
 CONFIG_MTK_RT_FIRST_CARD_EEPROM="flash"
-CONFIG_MTK_SECOND_IF_EEPROM_FLASH=y
-# CONFIG_MTK_SECOND_IF_EEPROM_PROM is not set
-# CONFIG_MTK_SECOND_IF_EEPROM_EFUSE is not set
-CONFIG_MTK_RT_SECOND_CARD_EEPROM="flash"
-CONFIG_MTK_MULTI_INF_SUPPORT=y
 CONFIG_MTK_WIFI_BASIC_FUNC=y
 CONFIG_MTK_DOT11_N_SUPPORT=y
 CONFIG_MTK_DOT11_VHT_AC=y
@@ -6792,9 +6786,6 @@ CONFIG_MTK_RED_SUPPORT=y
 # CONFIG_MTK_FIRST_IF_EPAELNA is not set
 CONFIG_MTK_FIRST_IF_IPAILNA=y
 # CONFIG_MTK_FIRST_IF_IPAELNA is not set
-CONFIG_MTK_SECOND_IF_EPAELNA=y
-# CONFIG_MTK_SECOND_IF_IPAILNA is not set
-# CONFIG_MTK_SECOND_IF_IPAELNA is not set
 CONFIG_MTK_MT7986_NEW_FW=y
 CONFIG_MTK_WIFI_FW_BIN_LOAD=y
 CONFIG_MTK_WIFI_SKU_TYPE="AX6000"
@@ -6885,7 +6876,7 @@ CONFIG_MTK_MT_MAC=y
 # CONFIG_MTK_CHIP_AXE is not set
 # CONFIG_MTK_CHIP_MT7915 is not set
 CONFIG_MTK_CHIP_MT7986=y
-CONFIG_MTK_CHIP_MT7916=y
+# CONFIG_MTK_CHIP_MT7916 is not set
 # CONFIG_MTK_CHIP_MT7981 is not set
 CONFIG_PACKAGE_kmod-warp=y
 CONFIG_WARP_VERSION=2
